syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "EchoServiceApi";

package cdv.grpc.model;

service EchoService {
    rpc echoUnary (EchoRequest) returns (EchoResponse) {}
    rpc echoStreamServer (EchoRequest) returns (stream EchoResponse) {}
    rpc echoStreamClient (stream EchoRequest) returns (EchoResponse) {}
    rpc echoStream (stream EchoRequest) returns (stream EchoResponse) {}
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}